# OpenPerceptionLab

./: .gitignore  README.md  config.example.yaml  fused_trajectory.npz  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demos/: camera_projection_demo.py  depth_demo.py  detect_demo.py  epipolar_demo.py  feature_match_demo.py  perception_demo.py  pose_demo.py  segmentation_demo.py  triangulation_demo.py
deployment/: __init__.py  onnx_export.py  onnx_inference.py  ort_gpu.py  run_export.py  tensorrt_stub.py  trtexec_helper.py
docs/: DATAFLOW.md  GPU_DEPLOY.md
docs/diagrams/: system_dataflow.mmd
fusion/: __init__.py  imu_propagation.py  io.py  lidar_vision_fusion.py  pose_graph_2d.py  pose_graph_3d.py  poses.py  run_fusion.py  scale_align.py  vio.py
geometry/: camera_model.py  epipolar.py  feature_matching.py  pose_estimation.py  triangulation.py
lidar/: __init__.py  io.py  map.py  odometry.py  registration.py  run_lidar_slam.py  sample_data.py
openperceptionlab/: __main__.py  config.py  logging_utils.py
openperceptionlab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
perception/: perception_system.py
perception/depth/: midas_depth.py
perception/segmentation/: deeplab_segment.py
reconstruction/: __init__.py  io.py  nerf_3dgs.py  run_sfm.py  sample_images.py  sfm.py
scripts/: benchmark_onnx_providers.py
slam/: run_slam.py
slam/backend/: loop_closure.py  map.py  optimizer.py
slam/core/: frame.py
slam/frontend/: feature.py  tracking.py
slam/visualization/: viewer.py
tests/: test_config.py  test_deployment_import.py  test_fusion_import.py  test_lidar_import.py  test_map_save_load.py  test_reconstruction_import.py  test_slam_import.py
