[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openperceptionlab"
version = "0.1.0"
description = "OpenPerceptionLab"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0", "numpy>=1.20"]
deploy = ["onnx>=1.14", "onnxruntime>=1.15", "torch>=2.0", "torchvision>=0.15"]
# GPU 机：不要与 onnxruntime 同时安装，请先 pip uninstall onnxruntime 再装 gpu 版
deploy-gpu = [
    "onnx>=1.14",
    "onnxruntime-gpu>=1.15",
    "torch>=2.0",
    "torchvision>=0.15",
]

[project.scripts]
opl = "openperceptionlab.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openperceptionlab*", "slam*", "lidar*", "fusion*", "reconstruction*", "deployment*", "geometry*", "perception*", "demos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
